--- a/hopfield.ipynb
+++ b/hopfield.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
     "        self.weights /= len(patterns)\n",
     "    \n",
     "    \n",
-    "    def train_oja(self, patterns, lr=0.001, u = 0.001, epochs=100):\n",
+    "    def train_oja(self, patterns, lr=0.001, epochs=100):\n",
     "        self.weights = np.random.uniform(-1, 1, (self.size, self.size)) / np.sqrt(self.size)\n",
     "        np.fill_diagonal(self.weights, 0)\n",
     "    \n",
     "        for _ in range(epochs):\n",
     "            for pattern in patterns:\n",
     "                y = np.dot(self.weights, pattern)\n",
-    "                self.weights += lr * y * (pattern - u * y * self.weights)\n",
+    "                self.weights += lr * y * (pattern - y * self.weights)\n",
     "                np.fill_diagonal(self.weights, 0)\n",
     "    \n",
     "    \n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -271,41 +271,7 @@
       "Correct (Oja): 0.000\n",
       "\n",
       "\n",
-      "large-25x50.csv (25, 50)\n",
-      "Average diff (Hebb): 0.131\n",
-      "Correct (Hebb): 0.000\n",
-      "Average diff (Oja): 0.342\n",
-      "Correct (Oja): 0.000\n",
-      "\n",
-      "\n",
-      "letters-14x20.csv (14, 20)\n",
-      "Average diff (Hebb): 0.094\n",
-      "Correct (Hebb): 0.000\n",
-      "Average diff (Oja): 0.144\n",
-      "Correct (Oja): 0.000\n",
-      "\n",
-      "\n",
-      "letters-abc-8x12.csv (8, 12)\n",
-      "Average diff (Hebb): 0.049\n",
-      "Correct (Hebb): 0.000\n",
-      "Average diff (Oja): 0.122\n",
-      "Correct (Oja): 0.000\n",
-      "\n",
-      "\n",
-      "OCRA-12x30-cut.csv (12, 30)\n",
-      "Average diff (Hebb): 0.164\n",
-      "Correct (Hebb): 0.143\n",
-      "Average diff (Oja): 0.360\n",
-      "Correct (Oja): 0.000\n",
-      "\n",
-      "\n",
-      "small-7x7.csv (7, 7)\n",
-      "Average diff (Hebb): 0.110\n",
-      "Correct (Hebb): 0.400\n",
-      "Average diff (Oja): 0.327\n",
-      "Correct (Oja): 0.000\n",
-      "\n",
-      "\n"
+      "large-25x50.csv (25, 50)\n"
      ]
     }
    ],
@@ -352,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +371,7 @@
        "(90000,)"
       ]
      },
-     "execution_count": 550,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +512,7 @@
        "(3, 25)"
       ]
      },
-     "execution_count": 555,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
